1st phase of the estructuration of the project ... (not finished yet !)